# HyprPlusified-PP

./: LICENSE  README.md
scripts/: CMakeLists.txt
scripts/archive/: cmdtest.cpp  volumecontrol.cpp
scripts/include/MonitorsMangler/: argsParser.hpp  mangle2.hpp  mangle3.hpp  mangler.hpp
scripts/include/MonitorsMangler/src/: argsParser.cpp  mangle2.cpp  mangle3.cpp  mangler.cpp
scripts/src/: cli.cpp  config.cpp  dencoder.cpp  hyprResize.cpp  menuFinder.cpp  monitorsMangler.cpp  mousekeys.cpp  pos.cpp  regex.cpp  volumeControl.cpp  volumeControl_im.cpp
